[package]

name = "vagga"
version = "0.1.0"
authors = ["paul@colomiets.name"]

build = "build.rs"
links = "container"

[dependencies]
argparse = { path = "rust-argparse" }
quire = { path = "rust-quire" }

config = { path = "config" }

[build-dependencies]
gcc = "0.2"

[lib]
name = "container"
path = "src/container/lib.rs"

[[bin]]
name = "vagga_build"
path = "src/builder/main.rs"

[[bin]]
name = "vagga_launcher"
path = "src/launcher/main.rs"

[[bin]]
name = "vagga_setup_netns"
path = "src/setup_netns/main.rs"

[[bin]]
name = "vagga_version"
path = "src/version/main.rs"

[[bin]]
name = "vagga_wrapper"
path = "src/wrapper/main.rs"
